syntax = "proto3";

option go_package = "github.com/jadwalapp/symmetrical-spoon/falak/pkg/gen/proto/profile/v1;profilev1";

package profile.v1;

message GetProfileRequest {}
message GetProfileResponse {
    string name = 1;
    string email = 2;
}

message AddDeviceRequest {
    string device_token = 1;
}
message AddDeviceResponse {}

service ProfileService {
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc AddDevice(AddDeviceRequest) returns (AddDeviceResponse);
}